Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- HEADER -->
     Welcome to Riyadh
     <!-- SUB HEAD -->
-
+    Where A Traditional Past Meets A Modern Future.
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
     </div>
