--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="wrapper">
     <!-- HEADER -->
-    Welcome to Riyadh
+    <h1></h1>Welcome to Riyadh
     <!-- SUB HEAD -->
     Where A Traditional Past Meets A Modern Future.
     <div id="content">
