--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- SUB HEAD -->
     <h2>Where A Traditional Past Meets A Modern Future.</h2>
     <div id="content">
+      <img src="./images/transportation/transit.jpg"
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
     </div>
   </div>
