--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- SUB HEAD -->
     <h2>Where A Traditional Past Meets A Modern Future.</h2>
     <div id="content">
-      <img src="./images/transportation/transit.jpg"
+      <img src="./images/transportation/transit.jpg" alt="Modern Transit" />
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
     </div>
   </div>
