Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div id="content">
       <img src="./images/transportation/transit.jpg" alt="Modern Transit" />
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
+      <h3>Travel</h3>
     </div>
   </div>
 </body>
