--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       
       <h3>Sources</h3>
       <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">Lonely Plant</a>
-      <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">Lonely Plant</a>
+      <a href="http://en.wikipedia.org/wiki/Riyadh">Wikipedia</a>
     </div>
   </div>
 </body>
